# HalalAI

./: .gitignore  CLAUDE.md  README.md
HalalAI-backend/LLM-service/: .dockerignore  Dockerfile  README.md  analyze_rag_response.py  config.py  csv_to_json_converter.py  data.txt  interactive_search.py  interactive_test.py  klassi_halal_rag_diplom.txt  main.py  prompt_utils.py  pyproject.toml  remote_llm.py  requirements.txt  sury.csv
HalalAI-backend/LLM-service/docs/: EXPERIMENTS_SETUP.md  FINETUNING_STATUS.md  api_layer_class_diagram.puml  experiment_tracker.md  experiments_results.md
HalalAI-backend/LLM-service/docs/improvements/: hybrid_search.py  monitoring.py  performance.py
HalalAI-backend/LLM-service/rag/: __init__.py  ingest_sury.py  simple_rag.py  utils.py
HalalAI-backend/LLM-service/scripts/: analyze_rag_response.py  create_chunks.py  expand_with_multiple_verses.py  finetune_embeddings.py  finetune_sbert_embeddings.py  kill_port.sh  parse_training_data.py  run_experiments.py  start_server.sh  test_api.sh  test_chat_validation.sh
HalalAI-backend/LLM-service/services/: local_llm.py
HalalAI-backend/LLM-service/src/halal_ai/: __init__.py  main.py
HalalAI-backend/LLM-service/src/halal_ai/api/: __init__.py  dependencies.py
HalalAI-backend/LLM-service/src/halal_rag/: __init__.py
HalalAI-backend/LLM-service/tests/: __init__.py  conftest.py  test_quality_checker.py
HalalAI-backend/LLM-service/tests/_legacy_obsolete_halal_ai/: test_embedding_quality.py  test_rag_retrieval.py
HalalAI-backend/LLM-service/tests/fixtures/: quranic_pairs.json
HalalAI-backend/LLM-service/tests/integration/: conftest.py  test_halal_rag_api.py  test_main_entrypoint.py  test_main_lifespan.py  test_performance.py  test_reliability.py  test_security.py
HalalAI-backend/LLM-service/tests/unit/: __init__.py  test_chat_service.py  test_dependencies.py  test_dto.py  test_embedding_branches.py  test_embedding_model.py  test_helpers.py  test_open_router.py  test_prompts.py  test_quality.py  test_query_expander.py  test_rag_pipeline.py  test_rate_limiter.py  test_simple_rag.py  test_vector_store.py
backend/: start.sh  (+1 more)
(+404 files in other folders)
